parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Prog
Rule 1     Prog -> Dcls
Rule 2     Prog -> Corpo
Rule 3     Prog -> Dcls Corpo
Rule 4     Dcls -> Dcl
Rule 5     Dcls -> Dcl Dcls
Rule 6     Dcl -> INT VAR
Rule 7     Dcl -> INT VAR = NUM
Rule 8     Dcl -> ARRAY ( VAR , NUM )
Rule 9     Dcl -> MATRIZ ( VAR , NUM , NUM )
Rule 10    Dcl -> Print
Rule 11    Dcl -> Scan
Rule 12    Corpo -> Prox
Rule 13    Corpo -> Prox Corpo
Rule 14    Prox -> { Stats }
Rule 15    Stats -> Stat
Rule 16    Stats -> Stats Stat
Rule 17    Stat -> Atr
Rule 18    Stat -> If
Rule 19    Stat -> While
Rule 20    Stat -> Scan
Rule 21    Stat -> Print
Rule 22    Atr -> VAR [ Exp ] = Exp
Rule 23    Atr -> VAR [ Exp ] [ Exp ] = Exp
Rule 24    Atr -> VAR = Exp
Rule 25    If -> IF ( Cond ) { Stats }
Rule 26    If -> IF ( Cond ) { Stats } ELSE { Stats }
Rule 27    While -> WHILE ( Cond ) { Stats }
Rule 28    Exp -> OpA
Rule 29    Exp -> OpR
Rule 30    Exp -> OpL
Rule 31    Exp -> Term
Rule 32    Cond -> OpL
Rule 33    Cond -> OpR
Rule 34    OpL -> & ( OpR , OpR )
Rule 35    OpL -> ~ OpR
Rule 36    OpL -> | ( OpR , OpR )
Rule 37    OpR -> > ( Exp , Exp )
Rule 38    OpR -> MAIORIG ( Exp , Exp )
Rule 39    OpR -> < ( Exp , Exp )
Rule 40    OpR -> MENORIG ( Exp , Exp )
Rule 41    OpR -> IGUALDADE ( Exp , Exp )
Rule 42    OpR -> DIFERENTE ( Exp , Exp )
Rule 43    OpA -> + ( Exp , Exp )
Rule 44    OpA -> - ( Exp , Exp )
Rule 45    OpA -> * ( Exp , Exp )
Rule 46    OpA -> / ( Exp , Exp )
Rule 47    OpA -> % ( Exp , Exp )
Rule 48    Term -> NUM
Rule 49    Term -> VAR
Rule 50    Term -> VAR [ Term ]
Rule 51    Term -> VAR [ Term ] [ Term ]
Rule 52    Scan -> SCAN ( VAR )
Rule 53    Scan -> SCAN ( VAR [ NUM ] )
Rule 54    Scan -> SCAN ( VAR [ NUM ] [ NUM ] )
Rule 55    Print -> PRINTT ( TEXTO )
Rule 56    Print -> PRINTV ( Term )

Terminals, with rules where they appear

%                    : 47
&                    : 34
(                    : 8 9 25 26 27 34 36 37 38 39 40 41 42 43 44 45 46 47 52 53 54 55 56
)                    : 8 9 25 26 27 34 36 37 38 39 40 41 42 43 44 45 46 47 52 53 54 55 56
*                    : 45
+                    : 43
,                    : 8 9 9 34 36 37 38 39 40 41 42 43 44 45 46 47
-                    : 44
/                    : 46
<                    : 39
=                    : 7 22 23 24
>                    : 37
ARRAY                : 8
DIFERENTE            : 42
ELSE                 : 26
IF                   : 25 26
IGUALDADE            : 41
INT                  : 6 7
MAIORIG              : 38
MATRIZ               : 9
MENORIG              : 40
NUM                  : 7 8 9 9 48 53 54 54
PRINTT               : 55
PRINTV               : 56
SCAN                 : 52 53 54
TEXTO                : 55
VAR                  : 6 7 8 9 22 23 24 49 50 51 52 53 54
WHILE                : 27
[                    : 22 23 23 50 51 51 53 54 54
]                    : 22 23 23 50 51 51 53 54 54
error                : 
{                    : 14 25 26 26 27
|                    : 36
}                    : 14 25 26 26 27
~                    : 35

Nonterminals, with rules where they appear

Atr                  : 17
Cond                 : 25 26 27
Corpo                : 2 3 13
Dcl                  : 4 5
Dcls                 : 1 3 5
Exp                  : 22 22 23 23 23 24 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47
If                   : 18
OpA                  : 28
OpL                  : 30 32
OpR                  : 29 33 34 34 35 36 36
Print                : 10 21
Prog                 : 0
Prox                 : 12 13
Scan                 : 11 20
Stat                 : 15 16
Stats                : 14 16 25 26 26 27
Term                 : 31 50 51 51 56
While                : 19

Parsing method: LALR

state 0

    (0) S' -> . Prog
    (1) Prog -> . Dcls
    (2) Prog -> . Corpo
    (3) Prog -> . Dcls Corpo
    (4) Dcls -> . Dcl
    (5) Dcls -> . Dcl Dcls
    (12) Corpo -> . Prox
    (13) Corpo -> . Prox Corpo
    (6) Dcl -> . INT VAR
    (7) Dcl -> . INT VAR = NUM
    (8) Dcl -> . ARRAY ( VAR , NUM )
    (9) Dcl -> . MATRIZ ( VAR , NUM , NUM )
    (10) Dcl -> . Print
    (11) Dcl -> . Scan
    (14) Prox -> . { Stats }
    (55) Print -> . PRINTT ( TEXTO )
    (56) Print -> . PRINTV ( Term )
    (52) Scan -> . SCAN ( VAR )
    (53) Scan -> . SCAN ( VAR [ NUM ] )
    (54) Scan -> . SCAN ( VAR [ NUM ] [ NUM ] )

    INT             shift and go to state 6
    ARRAY           shift and go to state 7
    MATRIZ          shift and go to state 8
    {               shift and go to state 11
    PRINTT          shift and go to state 12
    PRINTV          shift and go to state 13
    SCAN            shift and go to state 14

    Prog                           shift and go to state 1
    Dcls                           shift and go to state 2
    Corpo                          shift and go to state 3
    Dcl                            shift and go to state 4
    Prox                           shift and go to state 5
    Print                          shift and go to state 9
    Scan                           shift and go to state 10

state 1

    (0) S' -> Prog .



state 2

    (1) Prog -> Dcls .
    (3) Prog -> Dcls . Corpo
    (12) Corpo -> . Prox
    (13) Corpo -> . Prox Corpo
    (14) Prox -> . { Stats }

    $end            reduce using rule 1 (Prog -> Dcls .)
    {               shift and go to state 11

    Corpo                          shift and go to state 15
    Prox                           shift and go to state 5

state 3

    (2) Prog -> Corpo .

    $end            reduce using rule 2 (Prog -> Corpo .)


state 4

    (4) Dcls -> Dcl .
    (5) Dcls -> Dcl . Dcls
    (4) Dcls -> . Dcl
    (5) Dcls -> . Dcl Dcls
    (6) Dcl -> . INT VAR
    (7) Dcl -> . INT VAR = NUM
    (8) Dcl -> . ARRAY ( VAR , NUM )
    (9) Dcl -> . MATRIZ ( VAR , NUM , NUM )
    (10) Dcl -> . Print
    (11) Dcl -> . Scan
    (55) Print -> . PRINTT ( TEXTO )
    (56) Print -> . PRINTV ( Term )
    (52) Scan -> . SCAN ( VAR )
    (53) Scan -> . SCAN ( VAR [ NUM ] )
    (54) Scan -> . SCAN ( VAR [ NUM ] [ NUM ] )

    {               reduce using rule 4 (Dcls -> Dcl .)
    $end            reduce using rule 4 (Dcls -> Dcl .)
    INT             shift and go to state 6
    ARRAY           shift and go to state 7
    MATRIZ          shift and go to state 8
    PRINTT          shift and go to state 12
    PRINTV          shift and go to state 13
    SCAN            shift and go to state 14

    Dcl                            shift and go to state 4
    Dcls                           shift and go to state 16
    Print                          shift and go to state 9
    Scan                           shift and go to state 10

state 5

    (12) Corpo -> Prox .
    (13) Corpo -> Prox . Corpo
    (12) Corpo -> . Prox
    (13) Corpo -> . Prox Corpo
    (14) Prox -> . { Stats }

    $end            reduce using rule 12 (Corpo -> Prox .)
    {               shift and go to state 11

    Prox                           shift and go to state 5
    Corpo                          shift and go to state 17

state 6

    (6) Dcl -> INT . VAR
    (7) Dcl -> INT . VAR = NUM

    VAR             shift and go to state 18


state 7

    (8) Dcl -> ARRAY . ( VAR , NUM )

    (               shift and go to state 19


state 8

    (9) Dcl -> MATRIZ . ( VAR , NUM , NUM )

    (               shift and go to state 20


state 9

    (10) Dcl -> Print .

    INT             reduce using rule 10 (Dcl -> Print .)
    ARRAY           reduce using rule 10 (Dcl -> Print .)
    MATRIZ          reduce using rule 10 (Dcl -> Print .)
    PRINTT          reduce using rule 10 (Dcl -> Print .)
    PRINTV          reduce using rule 10 (Dcl -> Print .)
    SCAN            reduce using rule 10 (Dcl -> Print .)
    {               reduce using rule 10 (Dcl -> Print .)
    $end            reduce using rule 10 (Dcl -> Print .)


state 10

    (11) Dcl -> Scan .

    INT             reduce using rule 11 (Dcl -> Scan .)
    ARRAY           reduce using rule 11 (Dcl -> Scan .)
    MATRIZ          reduce using rule 11 (Dcl -> Scan .)
    PRINTT          reduce using rule 11 (Dcl -> Scan .)
    PRINTV          reduce using rule 11 (Dcl -> Scan .)
    SCAN            reduce using rule 11 (Dcl -> Scan .)
    {               reduce using rule 11 (Dcl -> Scan .)
    $end            reduce using rule 11 (Dcl -> Scan .)


state 11

    (14) Prox -> { . Stats }
    (15) Stats -> . Stat
    (16) Stats -> . Stats Stat
    (17) Stat -> . Atr
    (18) Stat -> . If
    (19) Stat -> . While
    (20) Stat -> . Scan
    (21) Stat -> . Print
    (22) Atr -> . VAR [ Exp ] = Exp
    (23) Atr -> . VAR [ Exp ] [ Exp ] = Exp
    (24) Atr -> . VAR = Exp
    (25) If -> . IF ( Cond ) { Stats }
    (26) If -> . IF ( Cond ) { Stats } ELSE { Stats }
    (27) While -> . WHILE ( Cond ) { Stats }
    (52) Scan -> . SCAN ( VAR )
    (53) Scan -> . SCAN ( VAR [ NUM ] )
    (54) Scan -> . SCAN ( VAR [ NUM ] [ NUM ] )
    (55) Print -> . PRINTT ( TEXTO )
    (56) Print -> . PRINTV ( Term )

    VAR             shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    SCAN            shift and go to state 14
    PRINTT          shift and go to state 12
    PRINTV          shift and go to state 13

    Stats                          shift and go to state 21
    Stat                           shift and go to state 22
    Atr                            shift and go to state 23
    If                             shift and go to state 24
    While                          shift and go to state 25
    Scan                           shift and go to state 26
    Print                          shift and go to state 27

state 12

    (55) Print -> PRINTT . ( TEXTO )

    (               shift and go to state 31


state 13

    (56) Print -> PRINTV . ( Term )

    (               shift and go to state 32


state 14

    (52) Scan -> SCAN . ( VAR )
    (53) Scan -> SCAN . ( VAR [ NUM ] )
    (54) Scan -> SCAN . ( VAR [ NUM ] [ NUM ] )

    (               shift and go to state 33


state 15

    (3) Prog -> Dcls Corpo .

    $end            reduce using rule 3 (Prog -> Dcls Corpo .)


state 16

    (5) Dcls -> Dcl Dcls .

    {               reduce using rule 5 (Dcls -> Dcl Dcls .)
    $end            reduce using rule 5 (Dcls -> Dcl Dcls .)


state 17

    (13) Corpo -> Prox Corpo .

    $end            reduce using rule 13 (Corpo -> Prox Corpo .)


state 18

    (6) Dcl -> INT VAR .
    (7) Dcl -> INT VAR . = NUM

    INT             reduce using rule 6 (Dcl -> INT VAR .)
    ARRAY           reduce using rule 6 (Dcl -> INT VAR .)
    MATRIZ          reduce using rule 6 (Dcl -> INT VAR .)
    PRINTT          reduce using rule 6 (Dcl -> INT VAR .)
    PRINTV          reduce using rule 6 (Dcl -> INT VAR .)
    SCAN            reduce using rule 6 (Dcl -> INT VAR .)
    {               reduce using rule 6 (Dcl -> INT VAR .)
    $end            reduce using rule 6 (Dcl -> INT VAR .)
    =               shift and go to state 34


state 19

    (8) Dcl -> ARRAY ( . VAR , NUM )

    VAR             shift and go to state 35


state 20

    (9) Dcl -> MATRIZ ( . VAR , NUM , NUM )

    VAR             shift and go to state 36


state 21

    (14) Prox -> { Stats . }
    (16) Stats -> Stats . Stat
    (17) Stat -> . Atr
    (18) Stat -> . If
    (19) Stat -> . While
    (20) Stat -> . Scan
    (21) Stat -> . Print
    (22) Atr -> . VAR [ Exp ] = Exp
    (23) Atr -> . VAR [ Exp ] [ Exp ] = Exp
    (24) Atr -> . VAR = Exp
    (25) If -> . IF ( Cond ) { Stats }
    (26) If -> . IF ( Cond ) { Stats } ELSE { Stats }
    (27) While -> . WHILE ( Cond ) { Stats }
    (52) Scan -> . SCAN ( VAR )
    (53) Scan -> . SCAN ( VAR [ NUM ] )
    (54) Scan -> . SCAN ( VAR [ NUM ] [ NUM ] )
    (55) Print -> . PRINTT ( TEXTO )
    (56) Print -> . PRINTV ( Term )

    }               shift and go to state 37
    VAR             shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    SCAN            shift and go to state 14
    PRINTT          shift and go to state 12
    PRINTV          shift and go to state 13

    Stat                           shift and go to state 38
    Atr                            shift and go to state 23
    If                             shift and go to state 24
    While                          shift and go to state 25
    Scan                           shift and go to state 26
    Print                          shift and go to state 27

state 22

    (15) Stats -> Stat .

    }               reduce using rule 15 (Stats -> Stat .)
    VAR             reduce using rule 15 (Stats -> Stat .)
    IF              reduce using rule 15 (Stats -> Stat .)
    WHILE           reduce using rule 15 (Stats -> Stat .)
    SCAN            reduce using rule 15 (Stats -> Stat .)
    PRINTT          reduce using rule 15 (Stats -> Stat .)
    PRINTV          reduce using rule 15 (Stats -> Stat .)


state 23

    (17) Stat -> Atr .

    }               reduce using rule 17 (Stat -> Atr .)
    VAR             reduce using rule 17 (Stat -> Atr .)
    IF              reduce using rule 17 (Stat -> Atr .)
    WHILE           reduce using rule 17 (Stat -> Atr .)
    SCAN            reduce using rule 17 (Stat -> Atr .)
    PRINTT          reduce using rule 17 (Stat -> Atr .)
    PRINTV          reduce using rule 17 (Stat -> Atr .)


state 24

    (18) Stat -> If .

    }               reduce using rule 18 (Stat -> If .)
    VAR             reduce using rule 18 (Stat -> If .)
    IF              reduce using rule 18 (Stat -> If .)
    WHILE           reduce using rule 18 (Stat -> If .)
    SCAN            reduce using rule 18 (Stat -> If .)
    PRINTT          reduce using rule 18 (Stat -> If .)
    PRINTV          reduce using rule 18 (Stat -> If .)


state 25

    (19) Stat -> While .

    }               reduce using rule 19 (Stat -> While .)
    VAR             reduce using rule 19 (Stat -> While .)
    IF              reduce using rule 19 (Stat -> While .)
    WHILE           reduce using rule 19 (Stat -> While .)
    SCAN            reduce using rule 19 (Stat -> While .)
    PRINTT          reduce using rule 19 (Stat -> While .)
    PRINTV          reduce using rule 19 (Stat -> While .)


state 26

    (20) Stat -> Scan .

    }               reduce using rule 20 (Stat -> Scan .)
    VAR             reduce using rule 20 (Stat -> Scan .)
    IF              reduce using rule 20 (Stat -> Scan .)
    WHILE           reduce using rule 20 (Stat -> Scan .)
    SCAN            reduce using rule 20 (Stat -> Scan .)
    PRINTT          reduce using rule 20 (Stat -> Scan .)
    PRINTV          reduce using rule 20 (Stat -> Scan .)


state 27

    (21) Stat -> Print .

    }               reduce using rule 21 (Stat -> Print .)
    VAR             reduce using rule 21 (Stat -> Print .)
    IF              reduce using rule 21 (Stat -> Print .)
    WHILE           reduce using rule 21 (Stat -> Print .)
    SCAN            reduce using rule 21 (Stat -> Print .)
    PRINTT          reduce using rule 21 (Stat -> Print .)
    PRINTV          reduce using rule 21 (Stat -> Print .)


state 28

    (22) Atr -> VAR . [ Exp ] = Exp
    (23) Atr -> VAR . [ Exp ] [ Exp ] = Exp
    (24) Atr -> VAR . = Exp

    [               shift and go to state 39
    =               shift and go to state 40


state 29

    (25) If -> IF . ( Cond ) { Stats }
    (26) If -> IF . ( Cond ) { Stats } ELSE { Stats }

    (               shift and go to state 41


state 30

    (27) While -> WHILE . ( Cond ) { Stats }

    (               shift and go to state 42


state 31

    (55) Print -> PRINTT ( . TEXTO )

    TEXTO           shift and go to state 43


state 32

    (56) Print -> PRINTV ( . Term )
    (48) Term -> . NUM
    (49) Term -> . VAR
    (50) Term -> . VAR [ Term ]
    (51) Term -> . VAR [ Term ] [ Term ]

    NUM             shift and go to state 45
    VAR             shift and go to state 46

    Term                           shift and go to state 44

state 33

    (52) Scan -> SCAN ( . VAR )
    (53) Scan -> SCAN ( . VAR [ NUM ] )
    (54) Scan -> SCAN ( . VAR [ NUM ] [ NUM ] )

    VAR             shift and go to state 47


state 34

    (7) Dcl -> INT VAR = . NUM

    NUM             shift and go to state 48


state 35

    (8) Dcl -> ARRAY ( VAR . , NUM )

    ,               shift and go to state 49


state 36

    (9) Dcl -> MATRIZ ( VAR . , NUM , NUM )

    ,               shift and go to state 50


state 37

    (14) Prox -> { Stats } .

    {               reduce using rule 14 (Prox -> { Stats } .)
    $end            reduce using rule 14 (Prox -> { Stats } .)


state 38

    (16) Stats -> Stats Stat .

    }               reduce using rule 16 (Stats -> Stats Stat .)
    VAR             reduce using rule 16 (Stats -> Stats Stat .)
    IF              reduce using rule 16 (Stats -> Stats Stat .)
    WHILE           reduce using rule 16 (Stats -> Stats Stat .)
    SCAN            reduce using rule 16 (Stats -> Stats Stat .)
    PRINTT          reduce using rule 16 (Stats -> Stats Stat .)
    PRINTV          reduce using rule 16 (Stats -> Stats Stat .)


state 39

    (22) Atr -> VAR [ . Exp ] = Exp
    (23) Atr -> VAR [ . Exp ] [ Exp ] = Exp
    (28) Exp -> . OpA
    (29) Exp -> . OpR
    (30) Exp -> . OpL
    (31) Exp -> . Term
    (43) OpA -> . + ( Exp , Exp )
    (44) OpA -> . - ( Exp , Exp )
    (45) OpA -> . * ( Exp , Exp )
    (46) OpA -> . / ( Exp , Exp )
    (47) OpA -> . % ( Exp , Exp )
    (37) OpR -> . > ( Exp , Exp )
    (38) OpR -> . MAIORIG ( Exp , Exp )
    (39) OpR -> . < ( Exp , Exp )
    (40) OpR -> . MENORIG ( Exp , Exp )
    (41) OpR -> . IGUALDADE ( Exp , Exp )
    (42) OpR -> . DIFERENTE ( Exp , Exp )
    (34) OpL -> . & ( OpR , OpR )
    (35) OpL -> . ~ OpR
    (36) OpL -> . | ( OpR , OpR )
    (48) Term -> . NUM
    (49) Term -> . VAR
    (50) Term -> . VAR [ Term ]
    (51) Term -> . VAR [ Term ] [ Term ]

    +               shift and go to state 56
    -               shift and go to state 57
    *               shift and go to state 58
    /               shift and go to state 59
    %               shift and go to state 60
    >               shift and go to state 61
    MAIORIG         shift and go to state 62
    <               shift and go to state 63
    MENORIG         shift and go to state 64
    IGUALDADE       shift and go to state 65
    DIFERENTE       shift and go to state 66
    &               shift and go to state 67
    ~               shift and go to state 68
    |               shift and go to state 69
    NUM             shift and go to state 45
    VAR             shift and go to state 46

    Exp                            shift and go to state 51
    OpA                            shift and go to state 52
    OpR                            shift and go to state 53
    OpL                            shift and go to state 54
    Term                           shift and go to state 55

state 40

    (24) Atr -> VAR = . Exp
    (28) Exp -> . OpA
    (29) Exp -> . OpR
    (30) Exp -> . OpL
    (31) Exp -> . Term
    (43) OpA -> . + ( Exp , Exp )
    (44) OpA -> . - ( Exp , Exp )
    (45) OpA -> . * ( Exp , Exp )
    (46) OpA -> . / ( Exp , Exp )
    (47) OpA -> . % ( Exp , Exp )
    (37) OpR -> . > ( Exp , Exp )
    (38) OpR -> . MAIORIG ( Exp , Exp )
    (39) OpR -> . < ( Exp , Exp )
    (40) OpR -> . MENORIG ( Exp , Exp )
    (41) OpR -> . IGUALDADE ( Exp , Exp )
    (42) OpR -> . DIFERENTE ( Exp , Exp )
    (34) OpL -> . & ( OpR , OpR )
    (35) OpL -> . ~ OpR
    (36) OpL -> . | ( OpR , OpR )
    (48) Term -> . NUM
    (49) Term -> . VAR
    (50) Term -> . VAR [ Term ]
    (51) Term -> . VAR [ Term ] [ Term ]

    +               shift and go to state 56
    -               shift and go to state 57
    *               shift and go to state 58
    /               shift and go to state 59
    %               shift and go to state 60
    >               shift and go to state 61
    MAIORIG         shift and go to state 62
    <               shift and go to state 63
    MENORIG         shift and go to state 64
    IGUALDADE       shift and go to state 65
    DIFERENTE       shift and go to state 66
    &               shift and go to state 67
    ~               shift and go to state 68
    |               shift and go to state 69
    NUM             shift and go to state 45
    VAR             shift and go to state 46

    Exp                            shift and go to state 70
    OpA                            shift and go to state 52
    OpR                            shift and go to state 53
    OpL                            shift and go to state 54
    Term                           shift and go to state 55

state 41

    (25) If -> IF ( . Cond ) { Stats }
    (26) If -> IF ( . Cond ) { Stats } ELSE { Stats }
    (32) Cond -> . OpL
    (33) Cond -> . OpR
